--- a/modules/personals/client/views/create-personal.client.view.html
+++ b/modules/personals/client/views/create-personal.client.view.html
@@ -12,9 +12,10 @@
             </alert>
         </div>
         <div class="row">
-          <div class="col-sm-6 text-center">
+          <div class="col-sm-6 text-center form-group">
             <i class="glyphicon glyphicon-user prsnl-profile"
-               ng-class="{'text-primary': createPrsnlCtrl.isConsultant, 'text-danger': !createPrsnlCtrl.isConsultant}"></i>
+               ng-class="{'text-primary': createPrsnlCtrl.isConsultant, 'text-danger': !createPrsnlCtrl.isConsultant}">
+            </i>
           </div>
           
           <div class="col-sm-6">
