--- a/modules/personals/client/views/list-personals.client.view.html
+++ b/modules/personals/client/views/list-personals.client.view.html
@@ -4,7 +4,7 @@
   </div>
   
   <div class="row">
-    <div class="col-xs-12 col-sm-8">
+    <div class="form-group col-xs-12 col-sm-8">
       <div class="input-group input-group-lg">
         <input type="text" class="form-control" ng-model="searchText" placeholder="Search...">
         <span class="input-group-btn">
@@ -14,12 +14,12 @@
     </div>
     
     <div class="row">
-      <div class="col-xs-12 col-sm-4 text-center">
-        <button type="button" class="btn btn-success text-center" ng-click="personalsCtrl.modelCreate('lg')">
-          <i class="glyphicon glyphicon-user"></i> <br>
-          New Personal
-        </button>
-      </div>
+        <div class="col-xs-12 col-sm-4 text-center pull-down">
+          <button type="button" class="btn btn-success text-center" ng-click="personalsCtrl.modelCreate('lg')">
+            <i class="glyphicon glyphicon-user"></i> <br>
+            New Personal
+          </button>
+        </div>
     </div>
   </div>
   <br>
