--- a/modules/personals/client/views/view-personal.client.view.html
+++ b/modules/personals/client/views/view-personal.client.view.html
@@ -1,15 +1,18 @@
 <div class="list-group">
-    <div class="col-xs-6 col-sm-4" data-ng-repeat="personal in personalsCtrl.personals | filter:searchText">
+    <div class="col-xs-6 col-sm-4 extra-padding" data-ng-repeat="personal in personalsCtrl.personals | filter:searchText">
       <a ng-click="personalsCtrl.modelUpdate('lg', personal)" class="list-group-item">      
         <h4 class="prsnl-cust-list text-center">
-          <i class="glyphicon glyphicon-user"></i>
+
+          <i class="glyphicon glyphicon-user prsnl-list"
+               ng-class="{'text-primary': personal.isConsultant, 'text-danger': !personal.isConsultant}"></i>
         </h4>
         <div class="row">         
-          <div class="col-xs-10 col-xs-offset-1">
+          <div class="col-xs-10 col-xs-offset-1 pull-up">
             <h4>{{personal.fName}} {{personal.lName}}</h4>
-            <small class="list-group-item-text text-muted">
-                <span data-ng-bind="personal.contact"></span>
-                <span data-ng-bind="personal.emailId"></span>
+            <small class="list-group-item-text text-muted text-xs">
+                <p>{{personal.contact}}</p>
+                <p>{{personal.emailId}}</p>
+                <!--<span data-ng-bind="personal.emailId"></span>-->
                 
                 <span class="pull-right">
                   <button class="btn btn-sm btn-default" ng-click="personalsCtrl.remove(personal)">
