--- a/modules/personals/client/views/edit-personal.client.view.html
+++ b/modules/personals/client/views/edit-personal.client.view.html
@@ -7,9 +7,9 @@
       <form name="editPersonalForm">
         <fieldset>
         <div class="form-group">
-            <alert type="danger" data-ng-show="error" class="text-center text-danger">
+            <uib-alert type="danger" data-ng-show="error" class="text-center text-danger">
               <span data-ng-bind="error"></span>
-            </alert>
+            </uib-alert>
         </div>
         <div class="row">
           <div class="col-sm-6 text-center">
