--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -4,9 +4,9 @@
     <form name="userForm" data-ng-submit="signup()" class="signin form-horizontal" novalidate autocomplete="off">
       <fieldset>
         <div class="form-group">
-            <alert type="danger" data-ng-show="error" class="text-center text-danger">
+            <uib-alert type="danger" data-ng-show="error" class="text-center text-danger">
               <span data-ng-bind="error"></span>
-            </alert>
+            </uib-alert>
         </div>
         <div class="form-group">
           <div class="input-group input-group-lg">
