--- a/modules/personals/client/views/list-personals.client.view.html
+++ b/modules/personals/client/views/list-personals.client.view.html
@@ -1,8 +1,22 @@
 <section data-ng-controller="PersonalsController as personalsCtrl">
-  <div class="page-header">
-    <h1>Personals</h1>
-  </div>
   
+  <div class="row">
+      
+    <div class="col-xs-6 col-sm-4">
+      <h1>Personal</h1>
+    </div>
+      
+      <div class="form-group col-xs-6 col-sm-8 col-md-8 text-right pull-down">
+          <h2>
+          <button type="button" class="btn btn-success text-center" ng-click="personalsCtrl.modelCreate('lg')">
+              <i class="glyphicon glyphicon-user"></i> <br>
+                  New Personal
+          </button>                  
+          </h2>
+      </div>
+      
+  </div>
+    
   <div class="row">
     <div class="form-group col-xs-12 col-sm-8">
       <div class="input-group input-group-lg">
@@ -12,17 +26,6 @@
         </span>
       </div>
     </div>
-    
-    <div class="row">
-        <div class="col-xs-12 col-sm-4 text-center pull-down">
-          <button type="button" class="btn btn-success text-center" ng-click="personalsCtrl.modelCreate('lg')">
-            <i class="glyphicon glyphicon-user"></i> <br>
-            New Personal
-          </button>
-        </div>
-    </div>
   </div>
-  <br>
-  <br>
   <list-personal></list-personal>
 </section>
