--- a/modules/events/client/views/create-events.client.view.html
+++ b/modules/events/client/views/create-events.client.view.html
@@ -27,14 +27,22 @@
         </form>
         
         <form class="form-inline" name="timeForm">
+            
             <div class="form-group">
-                <label class="control-label col-sm-2" for="startDate">Start Date</label>
-                <div class="col-sm-10">
+                <label class="control-label col-sm-3" for="startDate">Start Date</label>
+                <div class="col-sm-9">
                     <input type="text" class="form-control" ng-model="$parent.event.startDate" id="startDate" 
                            uib-datepicker-popup="MM-dd-yyyy" is-open="data.isOpen" ng-click="data.isOpen = true" required>  
-                </div>
-                
+                </div>                
             </div>
+            
+            <div class="form-group">
+                <label class="control-label col-sm-3" for="startTime">Start Time</label>
+                <div class="col-sm-9">
+                    <uib-timepicker ng-model="$parent.event.startDate" name="startTime"> </uib-timepicker>
+                </div>                
+            </div>
+            
         </form>     
     
       </div>
