--- a/modules/events/client/views/list-events.client.view.html
+++ b/modules/events/client/views/list-events.client.view.html
@@ -28,14 +28,21 @@
       </div>
     </div>
   </div>
+  
+  <br>
+  <br>
+  <br>
    
-    <div class="row">
+    <div class="row" class="col-md-6">
         <div class="form-group">         
-             
-            <div ng-repeat="event in events | filter:searchText" class="listItem col-md-6">
+            
+            <div class="col-md-6">
+              <div ng-repeat="event in events | filter:searchText" class="listItem">
                 <a ng-click="setCurrentEvent(event)">{{event.summary}}</a>
                 - {{ event.start.dateTime || event.start.date | date:medium }}
-            </div>
+              </div>
+            </div> 
+            
             
             <div id="mainContent" class="col-md-6">
                 <h2>{{ currentEvent.summary }}</h2>
