--- a/modules/personals/client/views/create-personal.client.view.html
+++ b/modules/personals/client/views/create-personal.client.view.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html angular-multi-select-mouse-trap angular-multi-select-key-trap>
 <section data-ng-controller="PersonalsCreateController as createPrsnlCtrl">
   
   <div class="modal-header">
@@ -20,17 +22,33 @@
           </div>
           
           <div class="col-sm-6">
+            
             <div class="form-group">
               <label class="control-label" for="fName">First Name</label>
               <div class="controls">
                 <input name="fName" type="text" data-ng-model="createPrsnlCtrl.fName" id="fName" class="form-control" placeholder="Enter your First Name" required>
               </div>
             </div>
+            
             <div class="form-group">
               <label class="control-label" for="lName">Last Name</label>
               <div class="controls">
                 <input name="lName" type="text" data-ng-model="createPrsnlCtrl.lName" id="lName" class="form-control" placeholder="Enter your Last Name" required>
               </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label" for="treatment">Treatment</label><br>
+                <angular-multi-select class="controls" ng-controller="ApptTypeController"             
+                    input-model="procedureList"
+                    output-model="createPrsnlCtrl.selectedTreatments"
+                    item-label="<[ description ]>"
+                    button-template="angular-multi-select-btn-data.htm"
+                    button-label="<[ description ]>"
+                    button-label-separator='[" , "]'
+                    tick-property="checked"
+                    id="treatment">
+                </angular-multi-select>
             </div>
           </div>
         </div>
@@ -72,8 +90,9 @@
   </div>
   
   <div class="modal-footer">
-    <button class="btn btn-success" type="button" ng-click="createPrsnlCtrl.CreatePrsnl(personal); ok()" ng-disabled="createPersonalForm.$invalid">Save & Close</button>
+    <button class="btn btn-success" type="button" ng-click="createPrsnlCtrl.CreatePrsnl(); ok()" ng-disabled="createPersonalForm.$invalid">Save & Close</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
   </div>
 
 </section>
+</html>
