--- a/modules/personals/client/views/edit-personal.client.view.html
+++ b/modules/personals/client/views/edit-personal.client.view.html
@@ -30,6 +30,20 @@
                 <input name="lName" type="text" data-ng-model="personal.lName" id="lName" class="form-control" placeholder="Enter your Last Name" required>
               </div>
             </div>
+            <div class="form-group">
+                <label class="control-label" for="treatment">Treatment</label><br>
+                <angular-multi-select class="controls" ng-controller="ApptTypeController"             
+                    input-model="personal.treatments"
+                    output-model="personal.selectedTreatments"
+                    item-label="<[ description ]>"
+                    button-template="angular-multi-select-btn-data.htm"
+                    button-label="<[ description ]>"
+                    button-label-separator='[" , "]'
+                    tick-property="checked"
+                    id="treatment">
+                </angular-multi-select>
+            </div>
+            
           </div>
         </div>
         
