--- a/modules/personals/client/views/create-personal.client.view.html
+++ b/modules/personals/client/views/create-personal.client.view.html
@@ -75,7 +75,7 @@
               <div class="controls">
                 <input name="speciality" type="text" data-ng-model="createPrsnlCtrl.speciality" id="speciality" class="form-control" placeholder="Enter your speciality">
               </div>
-            </div>
+            </div>]
             <div class="form-group">
               <label class="control-label" for="isConsultant">Consultant</label>
               <div class="controls">
