--- a/modules/events/client/css/events.css
+++ b/modules/events/client/css/events.css
@@ -8,3 +8,9 @@
     border-radius: 32px;
     color: black;
   }
+  .dentistList  {
+    border-radius: 32px;
+    margin-left: 1%;
+    height: 30px;
+    width: 180px;
+  }
