--- a/modules/personals/client/css/personals.css
+++ b/modules/personals/client/css/personals.css
@@ -19,3 +19,10 @@
 .list-group-item-text {
 	word-wrap: break-word;
 }
+
+.dayList  {
+    border-radius: 32px;
+    margin-left: 1%;
+    height: 30px;
+    width: 180px;
+}
