--- a/modules/personals/client/views/list-appttypes.client.view.html
+++ b/modules/personals/client/views/list-appttypes.client.view.html
@@ -8,7 +8,7 @@
             <th>Cost</th>
             <th>Action</th>
             <th>&nbsp;</th>
-        </tr>
+            </tr>
         </thead>
         
         <tbody>
@@ -16,15 +16,17 @@
                 <td><input type="text" class="form-control" ng-model="procedure.description"></td>
                 <td><input type="number" class="form-control" ng-model="procedure.duration"></td>
                 <td><input type="number" class="form-control" ng-model="procedure.price"></td>
-                <td><button class="btn btn-primary" ng-click="addProcedure()">Add Procedure</button></td>
-                <td><button class="btn btn-info" ng-click="update(procedure)">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselect()">Clear</button></td>
+                <td><button class="btn btn-primary" ng-click="addProcedure()" ng-disabled="disabled"><i class="glyphicon glyphicon-plus"></i></button></td>
+                <td><button class="btn btn-info" ng-click="update(procedure)" ng-disabled="!disabled"><i class="glyphicon glyphicon-ok"></i></button>
+                &nbsp;&nbsp;
+                <button class="btn btn-info" ng-click="deselect()"><i class="glyphicon glyphicon-refresh"></i></button></td>
             </tr>
             <tr data-ng-repeat="procedure in procedureList">
                 <td>{{procedure.description}}</td>
                 <td>{{procedure.duration}}</td>
                 <td>{{procedure.price}}</td>
-                <td><button class="btn btn-danger" ng-click="remove(procedure)">Remove</button></td>
-                <td><button class="btn btn-warning" ng-click="edit(procedure)">Edit</button></td>
+                <td><button class="btn btn-warning" ng-click="edit(procedure)"><i class="glyphicon glyphicon-pencil"></i></button></td>
+                <td><button class="btn btn-danger" ng-click="remove(procedure)"><i class="glyphicon glyphicon-trash"></i></button></td>
             </tr>
         </tbody>
     
