--- a/modules/personals/client/views/view-personal.client.view.html
+++ b/modules/personals/client/views/view-personal.client.view.html
@@ -1,14 +1,17 @@
 <div class="list-group">
     <div class="col-xs-6 col-sm-4 col-md-3 extra-padding" data-ng-repeat="personal in personalsCtrl.personals | filter:searchText">
-      <a ng-click="personalsCtrl.modelUpdate('lg', personal)" class="list-group-item">      
+      <a class="list-group-item">      
+        
         <h4 class="prsnl-cust-list text-center">
-
           <i class="glyphicon glyphicon-user prsnl-list"
                ng-class="{'text-primary': personal.isConsultant, 'text-danger': !personal.isConsultant}"></i>
         </h4>
+        
         <div class="row">         
           <div class="col-xs-10 col-xs-offset-1 pull-up">
+            
             <h4>{{personal.fName}} {{personal.lName}}</h4>
+            
             <small class="list-group-item-text text-muted text-xs">
                 <p>{{personal.contact}}</p>
                 <p>{{personal.emailId}}</p>
@@ -18,7 +21,17 @@
                     <i class="glyphicon glyphicon-trash"></i>
                   </button>
                 </span>
+                
+                <span class="pull-left">
+                  <button class="btn btn-sm btn-default" ng-click="personalsCtrl.modelUpdate('lg', personal)">
+                    <i class="glyphicon glyphicon-pencil"></i>
+                  </button>
+                  <button class="btn btn-sm btn-default" ng-click="personalsCtrl.modelShedule('lg', personal)">
+                    <i class="glyphicon glyphicon-calendar"></i>
+                  </button>
+                </span>
             </small>
+            
           </div>
         </div>
       </a>
