--- a/modules/personals/client/views/view-personal.client.view.html
+++ b/modules/personals/client/views/view-personal.client.view.html
@@ -26,7 +26,7 @@
                   <button class="btn btn-sm btn-default" ng-click="personalsCtrl.modelUpdate('lg', personal)">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </button>
-                  <button class="btn btn-sm btn-default" ng-click="personalsCtrl.modelShedule('lg', personal)">
+                  <button class="btn btn-sm btn-default" ng-click="personalsCtrl.modelSchedule('lg', personal)">
                     <i class="glyphicon glyphicon-calendar"></i>
                   </button>
                 </span>
