--- a/modules/events/client/views/create-events.client.view.html
+++ b/modules/events/client/views/create-events.client.view.html
@@ -22,6 +22,21 @@
                 </select>
             </div>
             
+            <div class="dentist-list panel panel-default">
+                
+                <div class="panel-heading">
+                    <input class="form-control" ng-model="search.name" placeholder="Search Name.."/>
+                </div>
+                
+                <div class="panel-body">
+                    <div class="ui-list-view-bordered" ui-list-view="contact in personalsCtrl.personals | filter:search">
+                        <p class="name"><strong>{{ contact.fName + ' ' + contact.lName}}</strong></p>
+                        <div class="speciality text-muted">{{ contact.speciality }}</div>
+                    </div>
+                </div>
+                
+            </div>
+            
         </form>
         
         <form class="form-inline" name="timeForm">
