--- a/modules/personals/client/views/edit-personal.client.view.html
+++ b/modules/personals/client/views/edit-personal.client.view.html
@@ -30,9 +30,9 @@
                 <input name="lName" type="text" data-ng-model="personal.lName" id="lName" class="form-control" placeholder="Enter your Last Name" required>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-controller="ApptTypeController"   >
                 <label class="control-label" for="treatment">Treatment</label><br>
-                <angular-multi-select class="controls" ng-controller="ApptTypeController"             
+                <angular-multi-select class="controls"          
                     input-model="personal.treatments"
                     output-model="personal.selectedTreatments"
                     item-label="<[ description ]>"
