--- a/modules/personals/client/views/list-personals.client.view.html
+++ b/modules/personals/client/views/list-personals.client.view.html
@@ -3,14 +3,14 @@
   <div class="row">
       
     <div class="col-xs-6 col-sm-4">
-      <h1>Personal</h1>
+      <h1>Dentist</h1>
     </div>
       
       <div class="form-group col-xs-6 col-sm-8 col-md-8 text-right pull-down">
           <h2>
           <button type="button" class="btn btn-success text-center" ng-click="personalsCtrl.modelCreate('lg')">
               <i class="glyphicon glyphicon-user"></i> <br>
-                  New Personal
+                  New Dentist
           </button>                  
           </h2>
       </div>
