--- a/modules/personals/client/views/view-personal.client.view.html
+++ b/modules/personals/client/views/view-personal.client.view.html
@@ -1,5 +1,5 @@
 <div class="list-group">
-    <div class="col-xs-6 col-sm-4 col-md-3 extra-padding" data-ng-repeat="personal in personalsCtrl.personals | filter:searchText">
+    <div class="col-sm-6 col-md-4 extra-padding" data-ng-repeat="personal in personalsCtrl.personals | filter:searchText">
       <a class="list-group-item">      
         
         <h4 class="prsnl-cust-list text-center">
