--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -32,8 +32,8 @@
           <button type="submit" class="btn btn-success btn-lg btn-block">Sign in</button>
         </div>
         <div class="text-center forgot-password">
-          <a data-ui-sref="password.forgot">Forgot your password?</a> &nbsp; Or &nbsp
-           <a data-ui-sref="authentication.signup">Sign up</a>
+          <a data-ui-sref="password.forgot">Forgot your password?</a> 
+           <!-- &nbsp; Or &nbsp <a data-ui-sref="authentication.signup">Sign up</a> Bhuvan-->
         </div>
       </fieldset>
     </form>
