--- a/modules/personals/client/views/list-apptslots.client.view.html
+++ b/modules/personals/client/views/list-apptslots.client.view.html
@@ -7,7 +7,7 @@
 
 <div class="modal-body">
 
-    <table class="table" >
+    <table class="table table-responsive">
         <thead>
             <tr>
             <th>Day of the week</th>
