--- a/modules/personals/client/views/list-appttypes.client.view.html
+++ b/modules/personals/client/views/list-appttypes.client.view.html
@@ -1,6 +1,6 @@
 <h2>Appointment Types</h2>
 <div ng-controller="ApptTypeController">
-    <table class="table">
+    <table class="table table-responsive">
         <thead>
             <tr>
             <th>Procedure</th>
